--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,218 @@
-matplotlib
-seaborn
-kagglehub
-pandas
-python-dotenv
-langchain-community
-langchain-openai
-langchain-chroma
-transformers
-gradio
-nbformat
-plotly
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: win-64
+# created-by: conda 24.9.2
+aiofiles=24.1.0=pypi_0
+aiohappyeyeballs=2.6.1=pypi_0
+aiohttp=3.11.18=pypi_0
+aiosignal=1.3.2=pypi_0
+annotated-types=0.7.0=pypi_0
+anyio=4.9.0=pypi_0
+asgiref=3.8.1=pypi_0
+asttokens=3.0.0=pyhd8ed1ab_1
+attrs=25.3.0=pypi_0
+backoff=2.2.1=pypi_0
+bcrypt=4.3.0=pypi_0
+build=1.2.2.post1=pypi_0
+bzip2=1.0.8=h2bbff1b_6
+ca-certificates=2025.4.26=h4c7d964_0
+cachetools=5.5.2=pypi_0
+certifi=2025.4.26=pypi_0
+charset-normalizer=3.4.2=pypi_0
+chroma-hnswlib=0.7.6=pypi_0
+chromadb=0.6.3=pypi_0
+click=8.2.0=pypi_0
+colorama=0.4.6=pyhd8ed1ab_1
+coloredlogs=15.0.1=pypi_0
+comm=0.2.2=pyhd8ed1ab_1
+contourpy=1.3.2=pypi_0
+cpython=3.11.12=py311hd8ed1ab_0
+cycler=0.12.1=pypi_0
+dataclasses-json=0.6.7=pypi_0
+debugpy=1.8.14=py311hda3d55a_0
+decorator=5.2.1=pyhd8ed1ab_0
+deprecated=1.2.18=pypi_0
+distro=1.9.0=pypi_0
+durationpy=0.9=pypi_0
+einops=0.8.1=pypi_0
+exceptiongroup=1.3.0=pyhd8ed1ab_0
+executing=2.2.0=pyhd8ed1ab_0
+fastapi=0.115.12=pypi_0
+fastjsonschema=2.21.1=pypi_0
+ffmpy=0.5.0=pypi_0
+filelock=3.18.0=pypi_0
+flatbuffers=25.2.10=pypi_0
+fonttools=4.58.0=pypi_0
+frozenlist=1.6.0=pypi_0
+fsspec=2025.3.2=pypi_0
+google-auth=2.40.1=pypi_0
+googleapis-common-protos=1.70.0=pypi_0
+gradio=5.29.0=pypi_0
+gradio-client=1.10.0=pypi_0
+greenlet=3.2.2=pypi_0
+groovy=0.1.2=pypi_0
+grpcio=1.71.0=pypi_0
+h11=0.16.0=pypi_0
+hf-xet=1.1.2=pypi_0
+httpcore=1.0.9=pypi_0
+httptools=0.6.4=pypi_0
+httpx=0.28.1=pypi_0
+httpx-sse=0.4.0=pypi_0
+huggingface-hub=0.31.1=pypi_0
+humanfriendly=10.0=pypi_0
+idna=3.10=pypi_0
+importlib-metadata=8.6.1=pyha770c72_0
+importlib-resources=6.5.2=pypi_0
+ipykernel=6.29.5=pyh4bbf305_0
+ipython=9.2.0=pyhca29cf9_0
+ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
+jedi=0.19.2=pyhd8ed1ab_1
+jinja2=3.1.6=pypi_0
+jiter=0.9.0=pypi_0
+joblib=1.5.0=pypi_0
+jsonpatch=1.33=pypi_0
+jsonpointer=3.0.0=pypi_0
+jsonschema=4.23.0=pypi_0
+jsonschema-specifications=2025.4.1=pypi_0
+jupyter_client=8.6.3=pyhd8ed1ab_1
+jupyter_core=5.7.2=pyh5737063_1
+kagglehub=0.3.12=pypi_0
+kiwisolver=1.4.8=pypi_0
+krb5=1.21.3=hdf4eb48_0
+kubernetes=32.0.1=pypi_0
+langchain=0.3.25=pypi_0
+langchain-chroma=0.2.3=pypi_0
+langchain-community=0.3.23=pypi_0
+langchain-core=0.3.59=pypi_0
+langchain-huggingface=0.2.0=pypi_0
+langchain-openai=0.3.16=pypi_0
+langchain-text-splitters=0.3.8=pypi_0
+langsmith=0.3.42=pypi_0
+libffi=3.4.4=hd77b12b_1
+libsodium=1.0.20=hc70643c_0
+markdown-it-py=3.0.0=pypi_0
+markupsafe=3.0.2=pypi_0
+marshmallow=3.26.1=pypi_0
+matplotlib=3.10.3=pypi_0
+matplotlib-inline=0.1.7=pyhd8ed1ab_1
+mdurl=0.1.2=pypi_0
+mmh3=5.1.0=pypi_0
+mpmath=1.3.0=pypi_0
+multidict=6.4.3=pypi_0
+mypy-extensions=1.1.0=pypi_0
+narwhals=1.38.2=pyhe01879c_0
+nbformat=5.10.4=pypi_0
+nest-asyncio=1.6.0=pyhd8ed1ab_1
+networkx=3.4.2=pypi_0
+numpy=2.2.5=pypi_0
+oauthlib=3.2.2=pypi_0
+onnxruntime=1.21.1=pypi_0
+openai=1.78.0=pypi_0
+openssl=3.5.0=ha4e3fda_1
+opentelemetry-api=1.33.0=pypi_0
+opentelemetry-exporter-otlp-proto-common=1.33.0=pypi_0
+opentelemetry-exporter-otlp-proto-grpc=1.33.0=pypi_0
+opentelemetry-instrumentation=0.54b0=pypi_0
+opentelemetry-instrumentation-asgi=0.54b0=pypi_0
+opentelemetry-instrumentation-fastapi=0.54b0=pypi_0
+opentelemetry-proto=1.33.0=pypi_0
+opentelemetry-sdk=1.33.0=pypi_0
+opentelemetry-semantic-conventions=0.54b0=pypi_0
+opentelemetry-util-http=0.54b0=pypi_0
+orjson=3.10.18=pypi_0
+overrides=7.7.0=pypi_0
+packaging=24.2=pypi_0
+pandas=2.2.3=pypi_0
+parso=0.8.4=pyhd8ed1ab_1
+pickleshare=0.7.5=pyhd8ed1ab_1004
+pillow=11.2.1=pypi_0
+pip=25.1=pyhc872135_2
+platformdirs=4.3.8=pyhe01879c_0
+plotly=6.0.1=pyhd8ed1ab_0
+posthog=4.0.1=pypi_0
+prompt-toolkit=3.0.51=pyha770c72_0
+propcache=0.3.1=pypi_0
+protobuf=5.29.4=pypi_0
+psutil=7.0.0=py311he736701_0
+pure_eval=0.2.3=pyhd8ed1ab_1
+pyasn1=0.6.1=pypi_0
+pyasn1-modules=0.4.2=pypi_0
+pydantic=2.11.4=pypi_0
+pydantic-core=2.33.2=pypi_0
+pydantic-settings=2.9.1=pypi_0
+pydub=0.25.1=pypi_0
+pygments=2.19.1=pyhd8ed1ab_0
+pyparsing=3.2.3=pypi_0
+pypika=0.48.9=pypi_0
+pyproject-hooks=1.2.0=pypi_0
+pyreadline3=3.5.4=pypi_0
+python=3.11.11=h4607a30_0
+python-dateutil=2.9.0.post0=pyhff2d567_1
+python-dotenv=1.1.0=pypi_0
+python-multipart=0.0.20=pypi_0
+python_abi=3.11=2_cp311
+pytz=2025.2=pypi_0
+pywin32=307=py311hda3d55a_3
+pyyaml=6.0.2=pypi_0
+pyzmq=26.4.0=py311h484c95c_0
+referencing=0.36.2=pypi_0
+regex=2024.11.6=pypi_0
+requests=2.32.3=pypi_0
+requests-oauthlib=2.0.0=pypi_0
+requests-toolbelt=1.0.0=pypi_0
+rich=14.0.0=pypi_0
+rpds-py=0.24.0=pypi_0
+rsa=4.9.1=pypi_0
+ruff=0.11.9=pypi_0
+safehttpx=0.1.6=pypi_0
+safetensors=0.5.3=pypi_0
+scikit-learn=1.6.1=pypi_0
+scipy=1.15.3=pypi_0
+seaborn=0.13.2=pypi_0
+semantic-version=2.10.0=pypi_0
+sentence-transformers=4.1.0=pypi_0
+setuptools=78.1.1=py311haa95532_0
+shellingham=1.5.4=pypi_0
+six=1.17.0=pyhd8ed1ab_0
+sniffio=1.3.1=pypi_0
+sqlalchemy=2.0.40=pypi_0
+sqlite=3.45.3=h2bbff1b_0
+stack_data=0.6.3=pyhd8ed1ab_1
+starlette=0.46.2=pypi_0
+sympy=1.14.0=pypi_0
+tenacity=9.1.2=pypi_0
+threadpoolctl=3.6.0=pypi_0
+tiktoken=0.9.0=pypi_0
+tk=8.6.14=h0416ee5_0
+tokenizers=0.21.1=pypi_0
+tomlkit=0.13.2=pypi_0
+torch=2.7.0+cu126=pypi_0
+torchaudio=2.7.0+cu126=pypi_0
+torchvision=0.22.0+cu126=pypi_0
+tornado=6.4.2=py311he736701_0
+tqdm=4.67.1=pypi_0
+traitlets=5.14.3=pyhd8ed1ab_1
+transformers=4.51.3=pypi_0
+typer=0.15.3=pypi_0
+typing-inspect=0.9.0=pypi_0
+typing-inspection=0.4.0=pypi_0
+typing_extensions=4.13.2=pyh29332c3_0
+tzdata=2025.2=pypi_0
+ucrt=10.0.22621.0=h57928b3_1
+urllib3=2.4.0=pypi_0
+uvicorn=0.34.2=pypi_0
+vc=14.42=haa95532_5
+vc14_runtime=14.42.34438=hfd919c2_26
+vs2015_runtime=14.42.34438=h7142326_26
+watchfiles=1.0.5=pypi_0
+wcwidth=0.2.13=pyhd8ed1ab_1
+websocket-client=1.8.0=pypi_0
+websockets=15.0.1=pypi_0
+wheel=0.45.1=py311haa95532_0
+wrapt=1.17.2=pypi_0
+xz=5.6.4=h4754444_1
+yarl=1.20.0=pypi_0
+zeromq=4.3.5=ha9f60a1_7
+zipp=3.21.0=pyhd8ed1ab_1
+zlib=1.2.13=h8cc25b3_1
+zstandard=0.23.0=pypi_0
